--- a/MoneyM/Storyboards/Settings.storyboard
+++ b/MoneyM/Storyboards/Settings.storyboard
@@ -33,13 +33,55 @@
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" id="lzt-3F-bux">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" id="lzt-3F-bux" customClass="SettingsTableViewCell" customModule="MoneyM" customModuleProvider="target">
                                 <rect key="frame" x="20" y="55.333332061767578" width="390" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lzt-3F-bux" id="gie-I4-v4b">
                                     <rect key="frame" x="0.0" y="0.0" width="359.66666666666669" height="43.666667938232422"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nxa-du-hle">
+                                            <rect key="frame" x="16" y="9" width="26" height="26"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qSQ-t7-EgZ">
+                                                    <rect key="frame" x="2" y="2" width="22" height="22"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="26" id="9e9-jp-6Wl"/>
+                                                <constraint firstAttribute="trailing" secondItem="qSQ-t7-EgZ" secondAttribute="trailing" constant="2" id="DQh-xz-KNc"/>
+                                                <constraint firstAttribute="bottom" secondItem="qSQ-t7-EgZ" secondAttribute="bottom" constant="2" id="RhJ-d7-A6j"/>
+                                                <constraint firstItem="qSQ-t7-EgZ" firstAttribute="top" secondItem="nxa-du-hle" secondAttribute="top" constant="2" id="hLj-8n-K92"/>
+                                                <constraint firstItem="qSQ-t7-EgZ" firstAttribute="leading" secondItem="nxa-du-hle" secondAttribute="leading" constant="2" id="nH7-f0-3Dr"/>
+                                                <constraint firstAttribute="height" constant="26" id="ss8-kC-Nje"/>
+                                            </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                    <integer key="value" value="5"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
+                                        </view>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rV1-ZN-HW3">
+                                            <rect key="frame" x="58" y="11.333333333333336" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="nxa-du-hle" firstAttribute="centerY" secondItem="gie-I4-v4b" secondAttribute="centerY" id="24G-pn-Ss8"/>
+                                        <constraint firstItem="rV1-ZN-HW3" firstAttribute="leading" secondItem="nxa-du-hle" secondAttribute="trailing" constant="16" id="6Oz-Yd-SW7"/>
+                                        <constraint firstItem="nxa-du-hle" firstAttribute="leading" secondItem="gie-I4-v4b" secondAttribute="leading" constant="16" id="BUF-nR-Wbh"/>
+                                        <constraint firstItem="rV1-ZN-HW3" firstAttribute="centerY" secondItem="gie-I4-v4b" secondAttribute="centerY" id="ZlA-1b-WWB"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="iconBackgroundView" destination="nxa-du-hle" id="mqO-j8-yWf"/>
+                                    <outlet property="iconImageView" destination="qSQ-t7-EgZ" id="rAM-4A-ThH"/>
+                                    <outlet property="imageView" destination="qSQ-t7-EgZ" id="b9K-ro-hac"/>
+                                    <outlet property="titleLabel" destination="rV1-ZN-HW3" id="m6e-Uw-IgH"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -49,7 +91,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Settings" id="DNt-oq-V9s">
                         <barButtonItem key="rightBarButtonItem" style="plain" id="ycW-AK-oK8">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="tOl-xy-lQG">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="tOl-xy-lQG">
                                 <rect key="frame" x="315" y="5" width="95" height="34.333333333333336"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
@@ -69,7 +111,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dGI-Uo-Nue" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1362" y="670"/>
+            <point key="canvasLocation" x="1361.8604651162791" y="669.52789699570815"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Wp6-Pj-ZPN">
