--- a/MoneyM/Storyboards/Settings.storyboard
+++ b/MoneyM/Storyboards/Settings.storyboard
@@ -333,10 +333,10 @@
             </objects>
             <point key="canvasLocation" x="3352" y="850"/>
         </scene>
-        <!--View Controller-->
+        <!--Settings Split View Controller-->
         <scene sceneID="Zcc-yV-tOE">
             <objects>
-                <splitViewController storyboardIdentifier="Settings" allowDoubleColumnStyle="YES" preferredDisplayMode="beside" id="m8C-qM-DYH" customClass="ViewController" customModule="MoneyM" customModuleProvider="target" sceneMemberID="viewController">
+                <splitViewController storyboardIdentifier="Settings" allowDoubleColumnStyle="YES" preferredDisplayMode="beside" id="m8C-qM-DYH" customClass="SettingsSplitViewController" customModule="MoneyM" customModuleProvider="target" sceneMemberID="viewController">
                     <connections>
                         <segue destination="vaD-wf-czi" kind="relationship" relationship="detailViewController" id="vq4-Wp-stm"/>
                         <segue destination="NCz-k8-a55" kind="relationship" relationship="masterViewController" id="7Iy-oh-9Gl"/>
@@ -358,13 +358,13 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGroupedBackgroundColor">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
